Use Node.js 16 on CI (#4274)
<!-- Thanks for submitting a pull request! We appreciate you spending
the time to work on these changes. Please follow the template so that
the reviewers can easily understand what the code changes affect. -->

## Summary

This PR upgrades Node.js from 14 to 16 to match React Native 0.72 (see
[here](https://github.com/facebook/react-native/blob/2c6edee68e936129644c14736e684a14bd11c55c/packages/react-native/template/package.json#L32-L34)).

## Test plan

<!-- Provide a minimal but complete code snippet that can be used to
test out this change along with instructions how to run it and a
description of the expected behavior. -->

--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -3,6 +3,7 @@ name: Test docs build
 on:
   pull_request:
     paths:
+      - '.github/workflows/docs-check.yml'
       - 'docs/**'
 
 jobs:
@@ -14,7 +15,7 @@ jobs:
       - name: Check out
         uses: actions/checkout@v1
       - name: Use Node.js 16
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'yarn'
