--- a/.github/workflows/static-root-checks.yml
+++ b/.github/workflows/static-root-checks.yml
@@ -2,6 +2,7 @@ name: Test TypeScript and Lint
 on:
   pull_request:
     paths:
+      - '.github/workflows/static-root-checks.yml'
       - 'src/**'
       - '*'
   push:
@@ -17,7 +18,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: Use Node.js 16
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'yarn'
