--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -2,6 +2,7 @@ name: Validate plugin
 on:
   pull_request:
     paths:
+      - '.github/workflows/validate-plugin.yml'
       - 'plugin/**'
   push:
     branches:
@@ -16,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Use Node.js 16
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'yarn'
