--- a/.github/workflows/build-monorepo-action.yml
+++ b/.github/workflows/build-monorepo-action.yml
@@ -25,20 +25,19 @@ jobs:
       group: ${{ inputs.concurrency_group }}
       cancel-in-progress: true
     steps:
-      - name: Create monorepo
-        run: |
-          mkdir monorepo
-          cd monorepo
-          echo '{"name":"rnos-monorepo-tester","version":"1.0.0","license":"MIT","private":true,"workspaces":{"packages":["RootApp","packages/PackageApp", "AppA", "AppB"],"nohoist":["**/react","**/react-dom","**/react-native","**/react-native/**","**/react-native-codegen","**/react-native-dev-menu"]}}' > package.json
-          yarn
-          mkdir packages
+      - name: Create directories
+        run: mkdir -p monorepo/packages
       - name: Create RootApp
         working-directory: monorepo
         run: npx react-native@next init RootApp --skip-install ${{ env.REACT_NATIVE_TEMPLATE }}
       - name: Create PackageApp
         working-directory: monorepo/packages
         run: npx react-native@next init PackageApp --skip-install ${{ env.REACT_NATIVE_TEMPLATE }}
-      
+      - name: Setup monorepo
+        working-directory: monorepo
+        run: |
+          echo '{"name":"rnos-monorepo-tester","version":"1.0.0","license":"MIT","private":true,"workspaces":{"packages":["RootApp","packages/PackageApp", "AppA", "AppB"],"nohoist":["**/react","**/react-dom","**/react-native","**/react-native/**","**/react-native-codegen","**/react-native-dev-menu"]}}' > package.json
+          yarn
       - name: Install dependencies for RootApp
         working-directory: monorepo/RootApp
         run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
