Moved changes from original PR

--- a/WebExample/package.json
+++ b/WebExample/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "web:plugin": "DISABLE_BABEL_PLUGIN=1 expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
