--- a/WebExample/tsconfig.json
+++ b/WebExample/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "rootDir": "..",
+    "paths": {
+      "react-native-reanimated": ["./src"]
+    }
   }
 }
