--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -35,5 +35,5 @@ jobs:
         id: diff
         run: git update-index --refresh && git diff-index --quiet HEAD --
       - name: Show diff
-        if: always() && steps.diff.outcome == 'failure'
+        if: failure() && steps.diff.outcome == 'failure'
         run: git diff
