--- a/.github/workflows/build-v8.yml
+++ b/.github/workflows/build-v8.yml
@@ -29,7 +29,7 @@ jobs:
         run: npx react-native init app --version ${{ env.REACT_NATIVE_VERSION }}
       - name: Install dependencies
         working-directory: app
-        run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }} react-native-v8 v8-android-jit
+        run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }} react-native-v8@1.6.0 v8-android-jit@10.100.1
       - name: Configure V8
         run: node reanimated_repo/.github/workflows/helper/configureV8.js
       - name: Build Android app
