Create app directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,15 @@
     "esModuleInterop": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
-  "exclude": ["Example", "FabricExample", "TVOSExample", "WebExample", "docs"]
+  "exclude": [
+    "app",
+    "docs",
+    "Example",
+    "FabricExample",
+    "plugin",
+    "TVOSExample",
+    "WebExample"
+  ]
 }
