--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "format:common": "find Common/ -iname *.h -o -iname *.cpp | xargs clang-format -i",
     "release": "npm login && release-it",
     "type:check": "yarn tsc --noEmit && cd plugin && yarn type:check && cd ..",
-    "prepare": "bob build && husky install && yarn plugin",
+    "prepare": "bob build && husky install && yarn plugin && yarn app",
     "circular_dependency_check": "yarn madge --extensions js,ts,tsx --circular src lib",
     "setup": "yarn && cd Example && yarn && cd ios && pod install --verbose && cd ../..",
     "clean": "rm -rf node_modules && cd Example && rm -rf node_modules && cd ios && pod deintegrate && cd ../..",
     "reset": "yarn clean && yarn setup",
     "clean:deep": "cd android && rm -rf .cxx .gradle build && cd ../Example/android && rm -rf .gradle build app/build && cd ../.. && yarn clean",
     "reset:deep": "yarn clean:deep && yarn setup",
-    "plugin": "cd plugin && yarn && cd .."
+    "plugin": "cd plugin && yarn && cd ..",
+    "app": "cd app && yarn && cd .."
   },
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
