--- a/app/package.json
+++ b/app/package.json
@@ -11,13 +11,16 @@
     "react-native": "*"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "react-dom": "18.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "^13.8.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@tsconfig/react-native": "^2.0.3",
