--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.17.12",
+    "@react-native-picker/picker": "^2.4.9",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
