Move PagerExample from Example app

--- a/WebExample/package.json
+++ b/WebExample/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "2.7.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
     "react-native-web": "~0.18.7"
   },
