--- a/Example/package.json
+++ b/Example/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
