--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "react-dom": "18.0.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
