--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.17.12",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-picker/picker": "^2.4.9",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
