--- a/plugin/package.json
+++ b/plugin/package.json
@@ -14,9 +14,7 @@
     "clean": "rm -f lib/*",
     "bundle": "yarn esbuild ./lib/plugin.js --bundle --external:@babel --external:convert-source-map --external:fs --log-level=warning --platform=node --sourcemap=linked --outfile=build/plugin.js",
     "format": "yarn prettier --write --list-different **/*.ts",
-    "watch-bundle": "yarn bundle",
-    "postwatch-bundle": "yarn clean",
-    "watch": "yarn tsc-watch --onSuccess \"yarn watch-bundle\"",
+    "watch": "yarn tsc-watch --onSuccess \"yarn bundle\"",
     "lint": "yarn eslint --max-warnings=0 --ext .ts . && yarn prettier --check **/*.ts",
     "type:check": "yarn tsc --noEmit"
   }
