--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,15 +1,20 @@
 {
   "devDependencies": {
+    "esbuild": "^0.17.11",
     "eslint": "^8.35.0",
     "prettier": "^2.5.1",
+    "tsc-watch": "^6.0.0",
     "typescript": "^4.1.3"
   },
   "license": "MIT",
   "readmeFilename": "README.md",
   "scripts": {
     "prepare": "yarn generate",
-    "generate": "yarn tsc",
+    "generate": "yarn tsc && yarn bundle && yarn clean",
+    "clean": "rm -f lib/*",
+    "bundle": "yarn esbuild ./lib/plugin.js --bundle --external:@babel --external:convert-source-map --external:fs --log-level=warning --platform=node --sourcemap=linked --outfile=build/plugin.js",
     "format": "yarn prettier --write --list-different **/*.ts",
+    "watch": "yarn tsc-watch --onSuccess \"yarn bundle\"",
     "lint": "yarn eslint --max-warnings=0 --ext .ts . && yarn prettier --check **/*.ts",
     "type:check": "yarn tsc --noEmit"
   }
