--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -7,7 +7,9 @@
     "sourceMap": true,
     "strict": true,
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "outDir": "lib/",
+    "rootDir": "src/"
   },
-  "files": ["index.ts"]
+  "files": ["src/plugin.ts"]
 }
