--- a/Example/package.json
+++ b/Example/package.json
@@ -42,9 +42,9 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "patch-package": "^6.4.7",
-    "prettier": "^2.6.1",
+    "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^4.8.4"
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native"
