--- a/.github/workflows/build-monorepo.yml
+++ b/.github/workflows/build-monorepo.yml
@@ -7,6 +7,13 @@ on:
       - RNReanimated.podspec
       - scripts/reanimated_utils.rb
       - android/build.gradle
+  merge_group:
+    paths:
+      - .github/workflows/build-monorepo.yml
+      - .github/workflows/build-monorepo-action.yml
+      - RNReanimated.podspec
+      - scripts/reanimated_utils.rb
+      - android/build.gradle
   push:
     branches:
       - main
