--- a/.github/workflows/build-v8.yml
+++ b/.github/workflows/build-v8.yml
@@ -7,6 +7,13 @@ on:
       - 'Common/**'
       - 'FabricExample/package.json'
       - 'Example/package.json'
+  merge_group:
+    paths:
+      - '.github/workflows/build-v8.yml'
+      - 'android/**'
+      - 'Common/**'
+      - 'FabricExample/package.json'
+      - 'Example/package.json'
   push:
     branches:
       - main
