--- a/.github/workflows/tvos-build.yml
+++ b/.github/workflows/tvos-build.yml
@@ -8,6 +8,14 @@ on:
       - 'Common/**'
       - 'TVOSExample/package.json'
       - 'TVOSExample/ios/**'
+  merge_group:
+    paths:
+      - '.github/workflows/tvos-build.yml'
+      - 'RNReanimated.podspec'
+      - 'ios/**'
+      - 'Common/**'
+      - 'TVOSExample/package.json'
+      - 'TVOSExample/ios/**'
   push:
     branches:
       - main
