--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -5,6 +5,10 @@ on:
     paths:
       - '.github/workflows/docs-check.yml'
       - 'docs/**'
+  merge_group:
+    paths:
+      - '.github/workflows/docs-check.yml'
+      - 'docs/**'
 
 jobs:
   build:
