--- a/.github/workflows/tvos-build.yml
+++ b/.github/workflows/tvos-build.yml
@@ -9,13 +9,8 @@ on:
       - 'TVOSExample/package.json'
       - 'TVOSExample/ios/**'
   merge_group:
-    paths:
-      - '.github/workflows/tvos-build.yml'
-      - 'RNReanimated.podspec'
-      - 'ios/**'
-      - 'Common/**'
-      - 'TVOSExample/package.json'
-      - 'TVOSExample/ios/**'
+    branches:
+      - main
   push:
     branches:
       - main
