--- a/.github/workflows/validate-ios.yml
+++ b/.github/workflows/validate-ios.yml
@@ -16,11 +16,8 @@ on:
       - 'package.json'
       - 'scripts/validate-ios.sh'
   merge_group:
-    paths:
-      - '.github/workflows/validate-ios.yml'
-      - 'ios/**'
-      - 'package.json'
-      - 'scripts/validate-ios.sh'
+    branches:
+      - main
 
 jobs:
   check:
