--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -5,9 +5,8 @@ on:
       - '.github/workflows/validate-plugin.yml'
       - 'plugin/**'
   merge_group:
-    paths:
-      - '.github/workflows/validate-plugin.yml'
-      - 'plugin/**'
+    branches:
+      - main
   push:
     branches:
       - main
