--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -10,14 +10,8 @@ on:
       - FabricExample/package.json
       - FabricExample/android/**
   merge_group:
-    paths:
-        - .github/workflows/android-build.yml
-        - android/**
-        - Common/**
-        - Example/package.json
-        - Example/android/**
-        - FabricExample/package.json
-        - FabricExample/android/**
+    branches:
+      - main
   push:
     branches:
       - main
