--- a/.github/workflows/build-on-windows.yml
+++ b/.github/workflows/build-on-windows.yml
@@ -7,11 +7,8 @@ on:
       - 'Common/**'
       - package.json
   merge_group:
-    paths:
-      - '.github/workflows/build-on-windows.yml'
-      - 'android/**'
-      - 'Common/**'
-      - package.json
+    branches:
+      - main
   push:
     branches:
       - main
