Add merge_group event to github workflows (#4296)
## Summary

Added `merge_group` event to workflows that are running for pull
requests to prevent merging outdated code.

## Test plan

<!-- Provide a minimal but complete code snippet that can be used to
test out this change along with instructions how to run it and a
description of the expected behavior. -->

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -9,6 +9,9 @@ on:
       - Example/android/**
       - FabricExample/package.json
       - FabricExample/android/**
+  merge_group:
+    branches:
+      - main
   push:
     branches:
       - main
