--- a/.github/workflows/build-on-windows.yml
+++ b/.github/workflows/build-on-windows.yml
@@ -6,6 +6,9 @@ on:
       - 'android/**'
       - 'Common/**'
       - package.json
+  merge_group:
+    branches:
+      - main
   push:
     branches:
       - main
