--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -5,6 +5,9 @@ on:
     paths:
       - '.github/workflows/docs-check.yml'
       - 'docs/**'
+  merge_group:
+    branches:
+      - main
 
 jobs:
   build:
