--- a/.github/workflows/static-example-apps-checks.yml
+++ b/.github/workflows/static-example-apps-checks.yml
@@ -6,6 +6,9 @@ on:
       - 'Example/**'
       - 'FabricExample/**'
       - '*'
+  merge_group:
+    branches:
+      - main
   push:
     branches:
       - main
