--- a/.github/workflows/static-root-checks.yml
+++ b/.github/workflows/static-root-checks.yml
@@ -5,6 +5,9 @@ on:
       - '.github/workflows/static-root-checks.yml'
       - 'src/**'
       - '*'
+  merge_group:
+    branches:
+      - main
   push:
     branches:
       - main
