--- a/.github/workflows/tvos-build.yml
+++ b/.github/workflows/tvos-build.yml
@@ -8,6 +8,9 @@ on:
       - 'Common/**'
       - 'TVOSExample/package.json'
       - 'TVOSExample/ios/**'
+  merge_group:
+    branches:
+      - main
   push:
     branches:
       - main
