--- a/.github/workflows/validate-ios.yml
+++ b/.github/workflows/validate-ios.yml
@@ -15,6 +15,9 @@ on:
       - 'ios/**'
       - 'package.json'
       - 'scripts/validate-ios.sh'
+  merge_group:
+    branches:
+      - main
 
 jobs:
   check:
