--- a/.github/workflows/build-v8.yml
+++ b/.github/workflows/build-v8.yml
@@ -7,6 +7,9 @@ on:
       - 'Common/**'
       - 'FabricExample/package.json'
       - 'Example/package.json'
+  merge_group:
+    branches:
+      - main
   push:
     branches:
       - main
