--- a/.github/workflows/validate-java.yml
+++ b/.github/workflows/validate-java.yml
@@ -5,6 +5,9 @@ on:
       - '.github/workflows/validate-java.yml'
       - 'android/src/main/java/**'
       - 'android/build.gradle'
+  merge_group:
+    branches:
+      - main
   push:
     branches:
       - main
