--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -4,6 +4,9 @@ on:
     paths:
       - '.github/workflows/validate-plugin.yml'
       - 'plugin/**'
+  merge_group:
+    branches:
+      - main
   push:
     branches:
       - main
