--- a/package.json
+++ b/package.json
@@ -88,22 +88,23 @@
     "react-native": "*"
   },
   "devDependencies": {
-    "@types/node": "12.7.12",
     "@babel/cli": "^7.20.0",
+    "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/preset-env": "^7.20.0",
+    "@babel/types": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/react-native": "^7.1.0",
-    "@types/convert-source-map": "^2.0.0",
-    "@babel/types": "^7.20.0",
     "@types/babel__core": "^7.20.0",
     "@types/babel__generator": "^7.6.4",
     "@types/babel__traverse": "^7.14.2",
+    "@types/convert-source-map": "^2.0.0",
     "@types/invariant": "^2.2.35",
     "@types/jest": "^27.4.0",
+    "@types/node": "12.7.12",
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
