--- a/WebExample/package.json
+++ b/WebExample/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "web:plugin": "DISABLE_BABEL_PLUGIN=1 expo start --web"
+    "start": "expo start --web",
+    "start:noplugin": "DISABLE_BABEL_PLUGIN=1 yarn start",
+    "lint": "eslint .",
+    "build": "expo export:web"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
@@ -27,6 +26,8 @@
     "@babel/preset-env": "^7.19.4",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "eslint": "^8.19.0",
+    "prettier": "^2.4.1",
     "typescript": "~4.3.5"
   },
   "private": true
