--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "type:check": "yarn tsc --noEmit",
-    "lint": "yarn lint:eslint && yarn lint:prettier",
-    "lint:eslint": "yarn eslint --max-warnings=0 .",
-    "lint:prettier": "yarn prettier --check ."
+    "lint": "eslint --max-warnings=0 ."
   },
   "peerDependencies": {
     "react": "*",
