--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint --max-warnings=0 .",
     "start": "react-native start",
     "test": "jest",
     "postinstall": "patch-package"
