--- a/TVOSExample/package.json
+++ b/TVOSExample/package.json
@@ -6,9 +6,9 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "tvos": "react-native run-ios --scheme=\"TVOSExample-tvOS\" --simulator=\"Apple TV\"",
+    "lint": "eslint --max-warnings=0 .",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
   },
   "dependencies": {
     "react": "18.0.0",
@@ -18,12 +18,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.19.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "18.0.0"
+    "prettier": "^2.6.1",
+    "react-test-renderer": "18.0.0",
+    "typescript": "^4.8.4"
   },
   "jest": {
     "preset": "react-native"
