Example apps improvements (#4308)
<!-- Thanks for submitting a pull request! We appreciate you spending
the time to work on these changes. Please follow the template so that
the reviewers can easily understand what the code changes affect. -->

## Summary

This PR:
* fixes WithoutBabelPluginExample when used in WebExample with
`DISABLE_BABEL_PLUGIN=1`
* adds missing definition of `_REANIMATED_VERSION_BABEL_PLUGIN` in
`globals.d.ts`
* add `--max-warnings=0` flag for ESLint
* adds ESLint and Prettier in WebExample and TVOSExample
* adds CI check for WebExample and TVOSExample

## Test plan

<!-- Provide a minimal but complete code snippet that can be used to
test out this change along with instructions how to run it and a
description of the expected behavior. -->

--- a/.github/workflows/static-example-apps-checks.yml
+++ b/.github/workflows/static-example-apps-checks.yml
@@ -3,8 +3,11 @@ on:
   pull_request:
     paths:
       - '.github/workflows/static-example-apps-checks.yml'
+      - 'app/**'
       - 'Example/**'
       - 'FabricExample/**'
+      - 'WebExample/**'
+      - 'TVOSExample/**'
       - '*'
   merge_group:
     branches:
@@ -17,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        working-directory: [Example, FabricExample]
+        working-directory: [app, Example, FabricExample, WebExample, TVOSExample]
     concurrency:
       group: typescript-${{ matrix.working-directory }}-${{ github.ref }}
       cancel-in-progress: true
@@ -40,3 +43,7 @@ jobs:
       - name: Lint
         working-directory: ${{ matrix.working-directory }}
         run: yarn lint
+      - name: Build
+        working-directory: ${{ matrix.working-directory }}
+        if: ${{ matrix.working-directory == 'WebExample' }}
+        run: yarn build
