--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@react-native/eslint-config": "^0.72.1",
+    "@types/node": "^18.15.11",
     "esbuild": "^0.17.11",
     "eslint": "^8.35.0",
     "prettier": "^2.5.1",
