--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "react": "18.2.0",
-    "react-native": "0.72.0-rc.0",
+    "react-native": "0.72.0-rc.1",
     "react-native-box2d": "^0.2.5",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-pager-view": "5.4.24",
@@ -31,14 +31,16 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.12.5",
     "@react-native/eslint-config": "^0.72.1",
+    "@react-native/metro-config": "^0.72.1",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/metro-config": "^0.76.1",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.75.1",
+    "metro-react-native-babel-preset": "0.76.0",
     "patch-package": "^6.4.7",
     "prettier": "^2.6.1",
     "react-test-renderer": "18.2.0",
