--- a/WebExample/package.json
+++ b/WebExample/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/preset-env": "^7.19.4",
+    "@react-native/eslint-config": "^0.73.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "eslint": "^8.19.0",
