--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/types": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.1",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/react-native": "^7.1.0",
@@ -137,7 +137,7 @@
     "madge": "^5.0.1",
     "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-native": "0.71.3",
+    "react-native": "0.72.0-rc.1",
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-test-renderer": "17.0.2",
