--- a/WebExample/package.json
+++ b/WebExample/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webexample",
   "version": "1.0.0",
-  "main": "AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --web",
     "start:noplugin": "DISABLE_BABEL_PLUGIN=1 yarn start",
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.0",
-    "expo": "~46.0.13",
+    "expo": "~48.0.10",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "^2.9.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "software-mansion/react-native-gesture-handler#8fd36224de64278401214ae3442fb089b261d6f5",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
     "react-native-web": "~0.18.7"
