--- a/package.json
+++ b/package.json
@@ -85,10 +85,10 @@
   },
   "peerDependencies": {
     "@babel/core": "^7.0.0-0",
-    "@babel/plugin-transform-shorthand-properties": "^7.0.0-0",
-    "@babel/plugin-transform-arrow-functions": "^7.0.0-0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0-0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-0",
+    "@babel/plugin-transform-arrow-functions": "^7.0.0-0",
+    "@babel/plugin-transform-shorthand-properties": "^7.0.0-0",
     "@babel/plugin-transform-template-literals": "^7.0.0-0",
     "react": "*",
     "react-native": "*"
@@ -97,10 +97,10 @@
     "@babel/cli": "^7.20.0",
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-transform-shorthand-properties": "^7.0.0",
-    "@babel/plugin-transform-arrow-functions": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-transform-arrow-functions": "^7.0.0",
+    "@babel/plugin-transform-shorthand-properties": "^7.0.0",
     "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/types": "^7.20.0",
@@ -140,6 +140,7 @@
     "react-native": "0.72.0-rc.1",
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-web": "^0.19.2",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.1.3"
   },
